# metras

./: Cargo.toml  README.md
.github/workflows/: build-test.yml  py.yml
metras/: Cargo.toml  build.rs
metras-cli/: Cargo.toml
metras-cli/src/: main.rs  monitored.rs
metras-py/: Cargo.toml  pyproject.toml
metras-py/src/: lib.rs
metras/src/: authorizer.rs  lib.rs  payload.rs
schemas/proto/: credential_payload.proto
