[workspace]
resolver = "3"
members = [
    "metras",
    "metras-cli",
    "metras-py"
]

[workspace.dependencies]
rama = { git = "https://github.com/plabayo/rama", features = ["net", "proxy", "socks5", "tcp"] }
prost = "0.14.1"
prost-build = "0.14.1"
tokio = "1.47.1"
secrecy = "0.10.3"
base64 = "0.22.1"