[package]
name = "metras-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

metras = { path = "../metras" }
rama = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }