[package]
name = "metras"
version = "0.1.0"
edition = "2024"

[dependencies]
rama = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
base64 = { workspace = true }
anyhow = "1.0.99"
thiserror = "2.0.16"

[build-dependencies]
prost-build = { workspace = true }
